Phase 1: Complete D&D 2024 combat simulator
Core engine:
- dice.py: dice expressions with 2024 GWF (min 3) and Savage Attacker (roll twice)
- models.py: Character, Weapon, CombatState with full 2024 property support
- effects.py: Rage, Reckless Attack, Dodge, weapon mastery conditions
- actions.py: attack resolution with weapon mastery (Graze, Vex, Sap, etc.)
- combat.py: full combat loop with initiative, movement, distance tracking
- loader.py: YAML hydration for builds, weapons, armor, classes, species
- runner.py: Monte Carlo runner with DPR, win rate, TTK stats
- tactics.py: pluggable TacticsEngine ABC with priority-list implementation

Data files (all sourced from 2024 PHB):
- 40+ weapons with mastery properties
- Full armor table (light/medium/heavy/shield)
- 6 species (Human, Orc, Elf, Goliath, Dragonborn, Halfling)
- 8 backgrounds with origin feats
- 4 class definitions (Fighter, Barbarian, Monk, Rogue) levels 1-2
- 10 fighting style feats
- All common actions and class features

Builds (6 pre-built level 2 characters):
- Fighter: GWF Greatsword, Dueling Longsword+Shield, Archery Longbow
- Barbarian: Greatsword (unarmored, rage, reckless)
- Monk: Shortsword (Flurry of Blows, unarmored defense)
- Rogue: Rapier (Sneak Attack via Cunning Action Hide)

Tests: 30 passing (dice, actions, combat, loader)
CLI: python -m sim.runner --build1 X --build2 Y -n 10000

--- a/data/builds/fighter_archery_longbow_2.yaml
+++ b/data/builds/fighter_archery_longbow_2.yaml
@@ -1,13 +1,25 @@
+# Fighter (Archery Longbow) - Level 2 Build
+
 name: Fighter (Archery Longbow)
 class: fighter
 level: 2
 species: elf
 background: soldier
-ability_scores: {str: 10, dex: 17, con: 15, int: 8, wis: 12, cha: 8}
-weapons: [longbow, shortsword]
-armor: studded_leather
+origin_feat: savage_attacker
+ability_scores:
+  str: 8
+  dex: 16
+  con: 14
+  int: 10
+  wis: 12
+  cha: 8
+weapons:
+- longbow
+- rapier
+armor: chain_shirt
 shield: false
 fighting_style: archery
-origin_feat: savage_attacker
 tactic: aggressive
-powers: [second_wind, action_surge]
+powers:
+- second_wind
+- action_surge
