--- a/data/powers/class_features.yaml
+++ b/data/powers/class_features.yaml
@@ -1,123 +1,137 @@
-# Class Features (Levels 1-2)
+# Class Features (Levels 1-2) - 2024 PHB
+# Referenced by build YAML files via 'powers' list.
 
-# --- Fighter ---
 second_wind:
   name: Second Wind
   class: fighter
   action_type: bonus_action
-  description: Regain 1d10 + fighter level HP
-  healing: "1d10+{level}"
+  description: Regain 1d10 + fighter level HP. 2 uses at levels 1-3. PHB p.90.
+  healing: 1d10+{level}
   resource: second_wind
-  uses: 1
-  recharge: short_rest
-
+  uses_at_level:
+    1: 2
+    2: 2
+    3: 2
+    4: 3
+  recharge: long_rest
+  recharge_partial: 1 use on short rest
 action_surge:
   name: Action Surge
   class: fighter
   action_type: free
-  description: Take one additional action this turn
+  description: Take one additional action this turn. 1 use, recharges on short rest.
+    PHB p.91.
   resource: action_surge
   uses: 1
   recharge: short_rest
-
 weapon_mastery_fighter:
   name: Weapon Mastery (Fighter)
   class: fighter
-  slots: 3
   passive: true
-
-# --- Barbarian ---
+  description: Use mastery properties of 3 kinds of Simple or Martial weapons. PHB
+    p.90.
+  slots: 3
 rage:
   name: Rage
   class: barbarian
   action_type: bonus_action
-  description: Enter rage — +2 melee damage, resistance to B/P/S, advantage on STR
-  duration: 10  # rounds
+  description: 'Enter rage: +2 melee STR damage, resistance to B/P/S, advantage on
+    STR checks/saves. 2 uses at levels 1-2. PHB p.50-51.'
+  duration: combat
   damage_bonus: 2
-  resistances: [bludgeoning, piercing, slashing]
+  resistances:
+  - bludgeoning
+  - piercing
+  - slashing
   resource: rage
-  uses: 2
+  uses_at_level:
+    1: 2
+    2: 2
+    3: 3
   recharge: long_rest
-
+  recharge_partial: 1 use on short rest
 unarmored_defense_barbarian:
   name: Unarmored Defense (Barbarian)
   class: barbarian
   passive: true
-  ac_formula: "10 + dex_mod + con_mod"
-
+  description: AC = 10 + DEX mod + CON mod when not wearing armor. Can use shield.
+    PHB p.50.
+  ac_formula: 10 + dex_mod + con_mod
 reckless_attack:
   name: Reckless Attack
   class: barbarian
   action_type: free
-  description: Gain advantage on melee STR attacks this turn; attacks against you have advantage
+  description: 'First attack of turn: gain advantage on STR melee attacks until start
+    of next turn. Attacks against you have advantage. PHB p.51.'
   trigger: first_attack_of_turn
-
 danger_sense:
   name: Danger Sense
   class: barbarian
   passive: true
-  description: Advantage on DEX saves you can see
-
-# --- Monk ---
+  description: Advantage on DEX saves unless Incapacitated. PHB p.51.
 martial_arts:
   name: Martial Arts
   class: monk
   passive: true
-  description: Use DEX for monk weapons/unarmed, d6 unarmed damage, bonus action unarmed strike
-  unarmed_die: "1d6"
+  description: 'Use DEX for monk weapons/unarmed. Martial Arts die = 1d6 (levels 1-4).
+    Bonus action: 1 unarmed strike. PHB p.100.'
+  unarmed_die: 1d6
   bonus_unarmed_strike: true
-
 unarmored_defense_monk:
   name: Unarmored Defense (Monk)
   class: monk
   passive: true
-  ac_formula: "10 + dex_mod + wis_mod"
-
-unarmored_movement:
-  name: Unarmored Movement
-  class: monk
-  passive: true
-  speed_bonus: 10
-
+  description: AC = 10 + DEX mod + WIS mod when not wearing armor or shield. PHB p.100.
+  ac_formula: 10 + dex_mod + wis_mod
 flurry_of_blows:
   name: Flurry of Blows
   class: monk
   action_type: bonus_action
-  description: Spend 1 Focus Point — make 2 unarmed strikes as bonus action
+  description: 'Spend 1 Focus Point: make 2 unarmed strikes as bonus action. PHB p.101.'
   resource: focus_points
   cost: 1
   unarmed_strikes: 2
-
 patient_defense:
   name: Patient Defense
   class: monk
   action_type: bonus_action
-  description: Spend 1 Focus Point — Dodge as bonus action
+  description: 'Free: Disengage as BA. Or spend 1 Focus Point: both Disengage + Dodge
+    as BA. PHB p.101.'
   resource: focus_points
   cost: 1
   effect: dodging
-
 step_of_the_wind:
   name: Step of the Wind
   class: monk
   action_type: bonus_action
-  description: Spend 1 Focus Point — Dash or Disengage as bonus action
+  description: 'Free: Dash as BA. Or spend 1 Focus Point: Dash + Disengage as BA,
+    doubled jump. PHB p.101.'
   resource: focus_points
   cost: 1
-
-# --- Rogue ---
+unarmored_movement:
+  name: Unarmored Movement
+  class: monk
+  passive: true
+  description: +10 ft speed at level 2 (when not wearing armor or shield). PHB p.101.
+  speed_bonus: 10
 sneak_attack:
   name: Sneak Attack
   class: rogue
   passive: true
-  description: "Extra 1d6 damage with finesse/ranged when you have advantage or ally adjacent"
-  extra_damage: "1d6"
+  description: Once per turn, +1d6 damage with finesse/ranged weapon when you have
+    advantage or ally within 5ft. PHB p.128.
+  extra_damage_at_level:
+    1: 1d6
+    2: 1d6
+    3: 2d6
   requires_advantage_or_ally: true
   once_per_turn: true
-
 cunning_action:
   name: Cunning Action
   class: rogue
   action_type: bonus_action
-  description: Dash, Disengage, or Hide as bonus action
-  options: [dash, disengage, hide]
+  description: Dash, Disengage, or Hide as bonus action. PHB p.129.
+  options:
+  - dash
+  - disengage
+  - hide
