Implement TWF Nick mastery & dual-wield builds
- Nick mastery: extra attack with offhand light weapon as part of Attack action
- TWF style: adds ability modifier to Nick attack damage (without it, no mod)
- Fixed Vex mastery: now consumed after one attack (was persisting)
- Tactics engine prefers Nick weapon as main attack to trigger extra attack
- Action Surge also triggers Nick extra attacks

New builds:
- Fighter TWF Scimitar+Shortsword (Nick+Vex, TWF style) — 58.2% avg win rate
- Rogue Dual Wield (Scimitar+Shortsword) — 20.1% avg win rate (+2.1% over rapier)

Results: TWF is competitive with other fighter styles (57-60% cluster).
Dual-wield Rogue marginally better than rapier Rogue in 1v1.

--- a/data/builds/fighter_twf_scimitar_shortsword_2.yaml
+++ b/data/builds/fighter_twf_scimitar_shortsword_2.yaml
@@ -1,8 +1,9 @@
-# Fighter (TWF Shortswords) - Level 2 Build
-# DEPRECATED: Use fighter_twf_scimitar_shortsword_2.yaml instead
-# Kept for backward compatibility — now uses Scimitar (Nick) + Shortsword (Vex)
+# Fighter (TWF Scimitar+Shortsword) - Level 2 Build
+# Scimitar (Nick) + Shortsword (Vex), TWF style
+# Nick mastery triggers extra attack with shortsword as part of Attack action
+# TWF style adds ability modifier to Nick attack damage
 
-name: Fighter (TWF Shortswords)
+name: Fighter (TWF Scimitar+SS)
 class: fighter
 level: 2
 species: orc
