Fix Frost vs Stone Giant ancestry (separate abilities), add Frost's Chill (+1d6 cold + slow), Goliath ancestry comparison

--- a/data/builds/goliath_frost_fighter_gwf_2.yaml
+++ b/data/builds/goliath_frost_fighter_gwf_2.yaml
@@ -1,11 +1,10 @@
-# Fighter (GWF Greatsword Goliath) - Level 2 Build
-# Goliath with Stone Giant ancestry (Stone's Endurance)
-
-name: Fighter (GWF Goliath Stone)
+# Fighter (GWF Goliath Frost) - Level 2
+# Frost's Chill: +1d6 cold on hit + reduce speed 10ft
+name: Fighter (GWF Goliath Frost)
 class: fighter
 level: 2
 species: goliath
-giant_ancestry: stone
+giant_ancestry: frost
 background: soldier
 origin_feat: savage_attacker
 ability_scores:
