CLI consolidation: single ./dnd-sim entry point with modes (rank, compare, dps, fight, show, list), tags on all builds, delete old run_*.py scripts

--- a/data/builds/fighter_archery_longbow_2.yaml
+++ b/data/builds/fighter_archery_longbow_2.yaml
@@ -1,5 +1,3 @@
-# Fighter (Archery Longbow) - Level 2 Build
-
 name: Fighter (Archery Longbow)
 class: fighter
 level: 2
@@ -23,3 +21,9 @@ tactic: aggressive
 powers:
 - second_wind
 - action_surge
+tags:
+- archery
+- elf
+- fighter
+- level2
+- ranged
