--- a/data/builds/human_fighter_gwf_2.yaml
+++ b/data/builds/human_fighter_gwf_2.yaml
@@ -1,6 +1,3 @@
-# Fighter (GWF Greatsword Human) - Level 2
-# Soldier bg → Savage Attacker, Versatile → Tough
-# Heroic Inspiration from Resourceful
 name: Fighter (GWF Human SA+Tough)
 class: fighter
 level: 2
@@ -25,3 +22,9 @@ tactic: aggressive
 powers:
 - second_wind
 - action_surge
+tags:
+- fighter
+- gwf
+- human
+- level2
+- melee
