--- a/data/builds/barbarian_greatsword_2.yaml
+++ b/data/builds/barbarian_greatsword_2.yaml
@@ -1,9 +1,3 @@
-# Barbarian (Greatsword) - Level 2 Build
-# Ability Scores: Point buy 15/14/15/8/10/8, Soldier +2 STR +1 CON = 16/14/16
-# AC: Unarmored Defense = 10 + DEX(2) + CON(3) = 15
-# HP: 12 + 3 (CON) + 7 + 3 (CON) = 25
-# Weapon Mastery: Greatsword (Graze), Javelin (Slow)
-
 name: Barbarian (Greatsword)
 class: barbarian
 level: 2
@@ -26,3 +20,8 @@ tactic: aggressive
 powers:
 - rage
 - reckless_attack
+tags:
+- barbarian
+- level2
+- melee
+- orc
