--- a/data/builds/fighter_twf_scimitar_shortsword_2.yaml
+++ b/data/builds/fighter_twf_scimitar_shortsword_2.yaml
@@ -1,8 +1,3 @@
-# Fighter (TWF Scimitar+Shortsword) - Level 2 Build
-# Scimitar (Nick) + Shortsword (Vex), TWF style
-# Nick mastery triggers extra attack with shortsword as part of Attack action
-# TWF style adds ability modifier to Nick attack damage
-
 name: Fighter (TWF Scimitar+SS)
 class: fighter
 level: 2
@@ -27,3 +22,9 @@ tactic: aggressive
 powers:
 - second_wind
 - action_surge
+tags:
+- fighter
+- level2
+- melee
+- orc
+- twf
