--- a/data/builds/goliath_fire_fighter_dueling_2.yaml
+++ b/data/builds/goliath_fire_fighter_dueling_2.yaml
@@ -1,5 +1,3 @@
-# Fighter (Dueling Goliath Fire) - Level 2
-# Fire Giant + Dueling + Shield = AC 18 + fire damage
 name: Fighter (Dueling Goliath Fire)
 class: fighter
 level: 2
@@ -24,3 +22,10 @@ tactic: aggressive
 powers:
 - second_wind
 - action_surge
+tags:
+- dueling
+- fighter
+- fire
+- goliath
+- level2
+- melee
