--- a/data/builds/goliath_frost_fighter_twf_2.yaml
+++ b/data/builds/goliath_frost_fighter_twf_2.yaml
@@ -1,5 +1,3 @@
-# Fighter (TWF Goliath Frost) - Level 2
-# Frost's Chill: +1d6 cold on hit + reduce speed 10ft
 name: Fighter (TWF Goliath Frost)
 class: fighter
 level: 2
@@ -25,3 +23,10 @@ tactic: aggressive
 powers:
 - second_wind
 - action_surge
+tags:
+- fighter
+- frost
+- goliath
+- level2
+- melee
+- twf
