--- a/data/builds/monk_2.yaml
+++ b/data/builds/monk_2.yaml
@@ -1,9 +1,3 @@
-# Monk (Shortsword) - Level 2 Build
-# Ability Scores: Point buy 8/15/14/10/15/8, Guard +2 DEX +1 WIS = 8/16/14/10/16/8
-# AC: Unarmored Defense = 10 + DEX(3) + WIS(3) = 16
-# HP: 8 + 2 (CON) + 5 + 2 (CON) = 17
-# Weapon Mastery: Shortsword (Vex), Dart (Vex)
-
 name: Monk (Shortsword)
 class: monk
 level: 2
@@ -29,3 +23,8 @@ powers:
 - patient_defense
 - step_of_the_wind
 - unarmored_movement
+tags:
+- human
+- level2
+- melee
+- monk
