--- a/data/builds/rogue_dual_wield_2.yaml
+++ b/data/builds/rogue_dual_wield_2.yaml
@@ -1,8 +1,3 @@
-# Rogue (Dual Wield) - Level 2 Build
-# Scimitar (Nick) + Shortsword (Vex), no fighting style
-# Nick mastery triggers extra shortsword attack = two chances for Sneak Attack
-# No TWF style means Nick attack doesn't add DEX to damage
-
 name: Rogue (Dual Wield)
 class: rogue
 level: 2
@@ -26,3 +21,8 @@ tactic: aggressive
 powers:
 - sneak_attack
 - cunning_action
+tags:
+- halfling
+- level2
+- ranged
+- rogue
