Add level 3 subclasses: Champion, Battle Master, Hunter Ranger
Champion Fighter:
- Improved Critical (crit on 19-20) via crit_threshold field on Character
- Builds: Champion GWF Orc, Champion TWF Fire Goliath

Battle Master Fighter:
- 4d8 Superiority Dice (short rest recharge)
- Maneuvers: Precision Attack (add die to near-miss attack roll),
  Trip Attack (die damage + prone on STR save fail),
  Riposte (reaction counter-attack on enemy miss + die damage),
  Menacing Attack (die damage + frightened on WIS save fail)
- Builds: BM GWF/TWF/Dueling Orc with different maneuver loadouts

Hunter Ranger (levels 1-3):
- d10 hit die, medium armor, martial weapons, fighting styles
- Hunter's Mark: bonus action, +1d6 per hit, PB uses/long rest, no concentration
- Colossus Slayer: +1d8 once per turn if target below max HP
- Builds: Hunter Ranger GWF, TWF, Archery

Bug fixes:
- Lucky feat defensive half: impose disadvantage on incoming attacks (reaction)
- Dueling Human build: added missing versatile_feat: tough
- Frightened condition: causes disadvantage on attacks
- Folded run_dps.py into sim/dps.py, deleted run_ability_value.py
- Baseline level 3 fighter builds for fair ranking comparisons

--- a/data/builds/battlemaster_dueling_orc_3.yaml
+++ b/data/builds/battlemaster_dueling_orc_3.yaml
@@ -1,10 +1,10 @@
-name: Fighter (Dueling Longsword)
+name: Battle Master Dueling Orc
 class: fighter
-level: 2
-species: human
+subclass: battle_master
+level: 3
+species: orc
 background: soldier
 origin_feat: savage_attacker
-versatile_feat: tough
 ability_scores:
   str: 16
   dex: 10
@@ -19,12 +19,17 @@ armor: chain_mail
 shield: true
 fighting_style: dueling
 tactic: aggressive
+maneuvers:
+- precision
+- menacing
+- riposte
 powers:
 - second_wind
 - action_surge
 tags:
+- battlemaster
 - dueling
 - fighter
-- human
-- level2
+- level3
 - melee
+- orc
