--- a/data/builds/battlemaster_twf_orc_3.yaml
+++ b/data/builds/battlemaster_twf_orc_3.yaml
@@ -1,10 +1,10 @@
-name: Fighter (Dueling Longsword)
+name: Battle Master TWF Orc
 class: fighter
-level: 2
-species: human
+subclass: battle_master
+level: 3
+species: orc
 background: soldier
 origin_feat: savage_attacker
-versatile_feat: tough
 ability_scores:
   str: 16
   dex: 10
@@ -13,18 +13,24 @@ ability_scores:
   wis: 12
   cha: 8
 weapons:
-- longsword
+- scimitar
+- shortsword
 - javelin
 armor: chain_mail
-shield: true
-fighting_style: dueling
+shield: false
+fighting_style: two_weapon_fighting
 tactic: aggressive
+maneuvers:
+- precision
+- trip
+- riposte
 powers:
 - second_wind
 - action_surge
 tags:
-- dueling
+- battlemaster
 - fighter
-- human
-- level2
+- level3
 - melee
+- orc
+- twf
