--- a/data/builds/champion_twf_fire_goliath_3.yaml
+++ b/data/builds/champion_twf_fire_goliath_3.yaml
@@ -1,10 +1,11 @@
-name: Fighter (Dueling Longsword)
+name: Champion TWF Fire Goliath
 class: fighter
-level: 2
-species: human
+subclass: champion
+level: 3
+species: goliath
+giant_ancestry: fire
 background: soldier
 origin_feat: savage_attacker
-versatile_feat: tough
 ability_scores:
   str: 16
   dex: 10
@@ -13,18 +14,21 @@ ability_scores:
   wis: 12
   cha: 8
 weapons:
-- longsword
+- scimitar
+- shortsword
 - javelin
 armor: chain_mail
-shield: true
-fighting_style: dueling
+shield: false
+fighting_style: two_weapon_fighting
 tactic: aggressive
 powers:
 - second_wind
 - action_surge
 tags:
-- dueling
+- champion
 - fighter
-- human
-- level2
+- fire
+- goliath
+- level3
 - melee
+- twf
