Level 3 subclasses: Barbarian, Monk, Rogue + Nick mastery fix + archive level 2 builds
Subclasses implemented:
- Barbarian: Berserker (Frenzy, Mindless Rage), Path of the Totem Warrior (Bear)
- Monk: Way of the Open Hand (Open Hand Technique, flurry push/prone/no-reaction),
  Way of Shadow (Shadow Arts: darkness, darkvision, pass without trace, silence)
- Rogue: Thief (Fast Hands, Second-Story Work), Arcane Trickster (Mage Hand
  Legerdemain, cantrips, spell slots)

Builds added (11 new):
- bear_totem_gwf_orc_3, bear_totem_twf_orc_3
- berserker_gwf_orc_3, berserker_twf_orc_3
- open_hand_human_3, open_hand_orc_3, shadow_monk_orc_3
- thief_halfling_3, thief_human_3
- arcane_trickster_halfling_3, arcane_trickster_human_3

Nick mastery bug fix:
- Added nick_used_this_turn flag to prevent Nick extra attack from firing
  more than once per turn (was triggering on both Attack action and Action
  Surge). Nick correctly does NOT consume bonus action, so Berserker Frenzy
  works alongside it.

Housekeeping:
- Archived 26 level 2 builds to data/builds/archive/level2/
- Updated phb_extracts.md with Barbarian/Monk/Rogue reference material

--- a/data/classes/barbarian.yaml
+++ b/data/classes/barbarian.yaml
@@ -20,6 +20,8 @@ features:
   2:
   - danger_sense
   - reckless_attack
+  3:
+  - primal_knowledge
 phb_ref: pp. 50-52
 notes:
   rage_2024: '2 uses at levels 1-2 (table p.51). Bonus action to enter. Duration:
